--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
         </div>
         <div id="text-presentation">
             <h1>
-                Hi there und Wilkommen :)
+                Hallo und Willkommen :)
                 <br>
                 <br> Ich bin Johan und suche eine Ausbildung!
             </h1>
         </div>
     </section>
     <section id="projects">
-        <h2>These are some of the projects I build.</h2>
+        <h2>Dies sind einige der Projeckte, die ich programmiert habe.</h2>
         <div id="projects-container">
 
             <a href="https://morrismalone.github.io/rock_scissors_paper/">
