Add Snake Game link

--- a/index.html
+++ b/index.html
@@ -89,6 +89,12 @@
                     <p>#Tic-Tac-Toe</p>
                 </div>
             </a>
+            <a href="https://morrismalone.github.io/snake-game/" target="_blank">
+                <div class="polaroid">
+                    <img src="https://farm8.staticflickr.com/7813/46080251235_5862cee9cf_c.jpg" width="800" height="439" alt="screencapture-morrismalone-github-io-snake-game-2019-02-05-14_48_35">                 
+                    <p>#Snake Game</p>
+                </div>
+            </a>
         </div>
     </section>
     <section id="contact">
