Add link to Drum Kit

--- a/index.html
+++ b/index.html
@@ -95,6 +95,12 @@
                     <p>#Snake Game</p>
                 </div>
             </a>
+            <a href="https://morrismalone.github.io/Drum-Kit/" target="_blank">
+                <div class="polaroid">
+                    <img src="https://farm8.staticflickr.com/7827/33210711748_9ac114a4da_k.jpg" width="2048" height="1124" alt="screencapture-morrismalone-github-io-Drum-Kit-2019-02-13-21_52_35">
+                    <p>#Drum Kit</p>
+                </div>
+            </a>
         </div>
     </section>
     <section id="contact">
