add projects in portfolio

--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
             </div>
         </div>
         <div id="external-links">
-          
-                <a href="https://github.com/MorrisMalone?tab=repositories" target="_blank">
-                    <i class="fab fa-github"></i>
-                </a>
-            
+
+            <a href="https://github.com/MorrisMalone?tab=repositories" target="_blank">
+                <i class="fab fa-github"></i>
+            </a>
+
         </div>
     </section>
     <section id="presentation">
@@ -55,50 +55,72 @@
 
             <a href="https://morrismalone.github.io/rock_scissors_paper/">
                 <div class="polaroid">
-                    <img src="https://farm5.staticflickr.com/4883/32965783718_a3f2bfcabd_c.jpg" width="800" height="455" alt="screencapture-morrismalone-github-io-rock_scissors_paper-2019-01-22-19_20_49">
+                    <img src="https://farm5.staticflickr.com/4883/32965783718_a3f2bfcabd_c.jpg" width="800" height="455"
+                        alt="screencapture-morrismalone-github-io-rock_scissors_paper-2019-01-22-19_20_49">
                     <p>#Rock Paper Scissors Game</p>
                 </div>
             </a>
             <a href="https://morrismalone.github.io/Etch-a-Sketch-Project/">
                 <div class="polaroid">
-                    <img src="https://farm5.staticflickr.com/4837/32966399438_bdf10d0b86_c.jpg" width="800" height="437" alt="screencapture-morrismalone-github-io-Etch-a-Sketch-Project-2019-01-22-20_29_31">
+                    <img src="https://farm5.staticflickr.com/4837/32966399438_bdf10d0b86_c.jpg" width="800" height="437"
+                        alt="screencapture-morrismalone-github-io-Etch-a-Sketch-Project-2019-01-22-20_29_31">
                     <p>#Etch-A-Sketch</p>
-                </div>
-            </a>
-            <a href="https://morrismalone.github.io/Calculator/">
-                <div class="polaroid">
-                    <img src="https://farm8.staticflickr.com/7906/39878482013_3a41fcbb6f_c.jpg" width="800" height="437" alt="screencapture-morrismalone-github-io-Calculator-2019-01-22-23_43_08">
-                    <p>#Calculator</p>
                 </div>
             </a>
             <a href="https://morrismalone.github.io/pomodoro_clock/" target="_blank">
                 <div class="polaroid">
-                    <img src="https://farm8.staticflickr.com/7824/31902250137_055d1d7a30_c.jpg" width="800" height="439" alt="screencapture-morrismalone-github-io-pomodoro_clock-2019-01-22-23_54_04">
+                    <img src="https://farm8.staticflickr.com/7824/31902250137_055d1d7a30_c.jpg" width="800" height="439"
+                        alt="screencapture-morrismalone-github-io-pomodoro_clock-2019-01-22-23_54_04">
                     <p>#Pomodoro Clock</p>
                 </div>
             </a>
             <a href="https://morrismalone.github.io/myLibrary/" target="_blank">
                 <div class="polaroid">
-                    <img src="https://farm8.staticflickr.com/7879/46791577612_51d442a5aa_c.jpg" width="800" height="439" alt="screencapture-morrismalone-github-io-myLibrary-2019-01-22-23_59_48">
+                    <img src="https://farm8.staticflickr.com/7879/46791577612_51d442a5aa_c.jpg" width="800" height="439"
+                        alt="screencapture-morrismalone-github-io-myLibrary-2019-01-22-23_59_48">
                     <p>#Library</p>
                 </div>
             </a>
             <a href="https://morrismalone.github.io/tic-tac-toe/" target="_blank">
                 <div class="polaroid">
-                    <img src="https://farm5.staticflickr.com/4899/31902315457_353a52d6c1_c.jpg" width="800" height="439" alt="screencapture-morrismalone-github-io-tic-tac-toe-2019-01-23-00_03_22">
+                    <img src="https://farm5.staticflickr.com/4899/31902315457_353a52d6c1_c.jpg" width="800" height="439"
+                        alt="screencapture-morrismalone-github-io-tic-tac-toe-2019-01-23-00_03_22">
                     <p>#Tic-Tac-Toe</p>
                 </div>
             </a>
             <a href="https://morrismalone.github.io/snake-game/" target="_blank">
                 <div class="polaroid">
-                    <img src="https://farm8.staticflickr.com/7813/46080251235_5862cee9cf_c.jpg" width="800" height="439" alt="screencapture-morrismalone-github-io-snake-game-2019-02-05-14_48_35">                 
+                    <img src="https://farm8.staticflickr.com/7813/46080251235_5862cee9cf_c.jpg" width="800" height="439"
+                        alt="screencapture-morrismalone-github-io-snake-game-2019-02-05-14_48_35">
                     <p>#Snake Game</p>
+                </div>
+            </a>
+            <a href="https://morrismalone.github.io/Snake-Game-II/" target="_blank">
+                <div class="polaroid">
+                    <img src="Snake Game II.jpg" width="800" height="439"
+                        alt="image of a snake game played with the nose">
+                    <p>#Snake Game II (nose play)</p>
                 </div>
             </a>
             <a href="https://morrismalone.github.io/Drum-Kit/" target="_blank">
                 <div class="polaroid">
-                    <img src="https://farm8.staticflickr.com/7827/33210711748_9ac114a4da_k.jpg" width="2048" height="1124" alt="screencapture-morrismalone-github-io-Drum-Kit-2019-02-13-21_52_35">
+                    <img src="https://farm8.staticflickr.com/7827/33210711748_9ac114a4da_k.jpg" width="2048" height="1124"
+                        alt="screencapture-morrismalone-github-io-Drum-Kit-2019-02-13-21_52_35">
                     <p>#Drum Kit</p>
+                </div>
+            </a>
+            <a href="https://morrismalone.github.io/To-do-App/" target="_blank">
+                <div class="polaroid">
+                    <img src="to-do-img.jpg" width="2048" height="1124"
+                        alt="image of the main page of a to-do list app">
+                    <p>#To-Do App</p>
+                </div>
+            </a>
+            <a href="https://morrismalone.github.io/JavaScript-Clock/" target="_blank">
+                <div class="polaroid">
+                    <img src="javascript-clock.jpg" width="2048" height="1124"
+                        alt="a functionnal clock website">
+                    <p>#JavaScript Clock</p>
                 </div>
             </a>
         </div>
